[gd_scene load_steps=10 format=3 uid="uid://boargd0u1vl82"]

[ext_resource type="Theme" uid="uid://ckjwd6cyiy2kr" path="res://resources/themes/StationViewport.tres" id="1_1iw0w"]
[ext_resource type="Script" path="res://stations/TeapotUi.gd" id="2_spi4n"]
[ext_resource type="PackedScene" uid="uid://dqsrtvunwqnoq" path="res://stations/ingredient_item.tscn" id="4_au64l"]
[ext_resource type="PackedScene" uid="uid://bx2sjbla64oj1" path="res://stations/recipe_option.tscn" id="6_t855n"]
[ext_resource type="Texture2D" uid="uid://c1u8ywg3r5qb2" path="res://items/ingredients/tea/black-tea-leaves.png" id="8_xft20"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_enyfh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kjx1g"]
bg_color = Color(0.250867, 0.578441, 0.310684, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q1ys5"]
bg_color = Color(0.89059, 0.89059, 0.89059, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d3dlw"]
bg_color = Color(0.615345, 0.192202, 0.586458, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="TeapotUi" type="Control"]
custom_minimum_size = Vector2(600, 200)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 4
theme = ExtResource("1_1iw0w")
script = ExtResource("2_spi4n")
recipeOptionScene = ExtResource("6_t855n")
ingredientItemScene = ExtResource("4_au64l")

[node name="RecipeSelect" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="RecipeSelect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="RecipeItemContainer" type="HBoxContainer" parent="RecipeSelect/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="RecipeOption" parent="RecipeSelect/MarginContainer/RecipeItemContainer" instance=ExtResource("6_t855n")]
custom_minimum_size = Vector2(120, 160)
layout_mode = 2

[node name="SingleRecipe" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="SingleRecipe"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="SingleRecipe/MarginContainer"]
layout_mode = 2

[node name="IngredientContainer" type="GridContainer" parent="SingleRecipe/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_constants/h_separation = 100
theme_override_constants/v_separation = 255
columns = 2

[node name="IngredientItem" parent="SingleRecipe/MarginContainer/VBoxContainer/IngredientContainer" instance=ExtResource("4_au64l")]
layout_mode = 2

[node name="Button" type="Button" parent="SingleRecipe/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(115, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 26
text = "Create"

[node name="RecipeFinished" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_enyfh")

[node name="VBoxContainer" type="VBoxContainer" parent="RecipeFinished"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = 16.0
offset_right = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="FinishedIcon" type="TextureRect" parent="RecipeFinished/VBoxContainer"]
custom_minimum_size = Vector2(85, 85)
layout_mode = 2
texture = ExtResource("8_xft20")
expand_mode = 2
stretch_mode = 5

[node name="FinishedName" type="Label" parent="RecipeFinished/VBoxContainer"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
text = "Black Tea Leaves"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Label2" type="Label" parent="RecipeFinished/VBoxContainer"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_kjx1g")
text = "Finished!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 18.5
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_q1ys5")
theme_override_styles/fill = SubResource("StyleBoxFlat_d3dlw")
show_percentage = false
